--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 		<!-- <link rel="stylesheet" href="css/shep.css"> -->
 		<style>
 			body {
-				background-color: rgb(200,200,200);
+				/*background-color: rgb(200,200,200);*/
+				background-color: #45B4A0;
 				margin: 0px;
 				color:#000;
 				overflow: hidden;
@@ -126,7 +127,7 @@
 			<div class="wrap">
 				<div class="sub"><a href="three.html" title="three.js的demo">Three.js的demos</a></div>
 				<!-- <div class="sub"><a href="mess.html" title="一些乱七八糟的展示">Mess</a></div> -->
-				<div class="sub"><a href="book.html" title="一些书籍">我的书</a></div>
+				<div class="sub"><a href="book.html" title="一些书籍">books</a></div>
 				<div class="sub"><a href="onhisown.html" title="在人间">On his own</a></div>
 			</div>
 
@@ -158,8 +159,8 @@
 			phi = 0, theta = 0,
 			target = new THREE.Vector3();
 
-			init();
-			animate();
+			// init();
+			// animate();
 
 			function init() {
 
