--- a/three.html
+++ b/three.html
@@ -26,16 +26,16 @@
 	<h3 class="title">webgl demos</h3>
 	<ul>
 		<li><a href="tbox.html" target="myframe">Box with data</a></li>
-		<li><a href="tplayer.html" target="myframe">空间播放器</a></li>
+		<li><a href="tplayer.html" target="_blank">空间播放器</a></li>
 		<li><a href="cimg.html" target="_blank">Canvas图片切分2D</a></li>
-		<li><a href="ai.html" target="myframe">Alphago李世石大战第一局</a></li>
-		<li><a href="portrait.html" target="myframe">portrait Trump</a></li>
-		<li><a href="threebody.html" target="myframe">伪三体星</a></li>
-		<li><a href="text.html" target="myframe">文本的geometry</a></li>
-		<li><a href="particle.html" target="myframe">粒子与geometry</a></li>
-		<li><a href="http://www.134340.space/" target="myframe">3d空间画板</a></li>
-		<li><a href="emo1.html" target="myframe">demo9</a></li>
-		<li><a href="emo1.html" target="myframe">demo10</a></li>
+		<li><a href="ai.html" target="_blank">Alphago李世石大战第一局</a></li>
+		<li><a href="portrait.html" target="_blank">portrait Trump</a></li>
+		<li><a href="threebody.html" target="_blank">伪三体星</a></li>
+		<li><a href="text.html" target="_blank">文本的geometry</a></li>
+		<li><a href="particle.html" target="_blank">粒子与geometry</a></li>
+		<li><a href="http://www.134340.space/" target="_blank">3d空间画板</a></li>
+		<li><a href="emo1.html" target="_blank">demo9</a></li>
+		<li><a href="emo1.html" target="_blank">demo10</a></li>
 	</ul>
 </div>
 <div class="content">
