--- a/threebody.html
+++ b/threebody.html
@@ -1,11 +1,9 @@
-<!-- 这是可以通用的html部分 -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-	<meta name="description" content="展示一些样例,写一些书籍,干点啥好呢,gy的网站">
+	<meta name="description" content="展示一些样例,写一些书籍,gy的网站">
 	<meta name="keywords" content="three.js,demos,canvas,webgl,tricks,前端,guoyang,gy134340,web">
 	<link rel="icon" href="img/icon/favicon.png">
 	<link rel="stylesheet" href="css/reset.css">
@@ -51,7 +49,6 @@
 <script src='js/tween.min.js'></script>
 <script src="js/RequestAnimationFrame.js"></script>
 <script type="text/javascript">
-
 
 var container,stats;	
 var canavs;
@@ -164,7 +161,6 @@ function addSprites(num){
 	}
 }
 
-
 var delta1 = 0;
 var delta2 = 180;
 var delta3 = 270;
@@ -208,10 +204,7 @@ function starMove(){
     light3.position.x = position3.x;
     light3.position.y = position3.y;
     light3.position.z = position3.z;
-
-   
-     
-    
+  
 }
 
 function render(){
