--- a/cimg.html
+++ b/cimg.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>three.js</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-	<meta name="description" content="展示一些样例,写一些书籍,干点啥好呢,gy的网站">
+	<meta name="description" content="展示一些样例,写一些书籍,gy的网站">
 	<meta name="keywords" content="three.js,demos,canvas,webgl,tricks,前端,guoyang,gy134340,web">
 	<link rel="icon" href="img/icon/favicon.png">
 	<link rel="stylesheet" href="css/reset.css">
@@ -131,7 +131,6 @@ $(function(){
 	}
 
 	function draw(){
-
 		var atomWidth = canvasWidth / 50 ;
 		var atomHeight = canvasHeight / 33;
 
@@ -232,7 +231,10 @@ $(function(){
 
 	// dom加载完开始
 	// window.addEventListener('load', function() {
-		animate();			// tween
+		window.onload = function(){
+			animate();			// tween
+		}
+		
 
 
 		var rotatex = document.getElementById("rotatex");
